--- a/playbooks/pb-demo.yml
+++ b/playbooks/pb-demo.yml
@@ -1,1 +1,10 @@
----
+- name: Sample playbook - Hello World, AWX
+  hosts: localhost
+  gather_facts: no
+  vars:
+    message: "Hello World, AWX"
+  
+  tasks:
+    - name: Print Hello World
+      debug:
+        var: message
